Simple OS V0.1.0 Dev Build 2
- Add High Contrast
- Fix SimpleReader speaking of Help tab of Login

--- a/src/login.html
+++ b/src/login.html
@@ -33,7 +33,7 @@
                 </form>
             </div>
             <div class="card-action right-align">
-                <a class="borderable readable-button borderable" tabindex="0" id="loginbutton" data-readable="Login" href="javascript:login();">Login</a>
+                <a class="readable-button borderable invert-black" tabindex="0" id="loginbutton" data-readable="Login" href="javascript:login();">Login</a>
             </div>
         </div>
         <div class="corner" id="bottomButtons">
@@ -52,14 +52,16 @@
             <div class="card alert">
                 <div class="card-content borderable readable-text" tabindex="0" id="alertokinfo" data-readable="Alert content."></div>
                 <div class="card-action right-align">
-                    <a class="borderable readable-button borderable" tabindex="0" id="alertok" data-readable="OK" href="javascript:alertClose();">OK</a>
+                    <a class="borderable readable-button borderable invert-black" tabindex="0" id="alertok" data-readable="OK" href="javascript:alertClose();">OK</a>
                 </div>
             </div>
         </div>
         <style id="sreadStyle"></style>
+        <style id="hconStyle"></style>
         <script type="text/javascript" src="js/materialize.min.js"></script>
         <script type="text/javascript" src="addons.js"></script>
         <script type="text/javascript" src="sread.js"></script>
+        <script type="text/javascript" src="hcon.js"></script>
         <script type="text/javascript" src="login.js"></script>
     </body>
 </html>
