Simple OS V0.1.0 Dev Build 3
- Create boot screen
- Add caret positioning readout to SimpleReader
- Add read-agin functionality to SimpleReader
- Fix SimpleReader text overflow management
- Change SimpleReader icon
- Add working time

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,19 @@
-<script>window.location.href = "login.html";</script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Simple OS</title>
+        <link rel="shortcut icon" href="favicon.png">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto" rel="stylesheet">
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="lib/jquery.js"></script>
+        <script src="lib/q.js"></script>
+        <script src="lib/LargeLocalStorage.min.js"></script>
+    </head>
+    <body class="index"><img src="favicon.png" class="index logo" /><br>
+         <div class="preloader-wrapper small active" id="indexLoader"><div class="spinner-layer spinner-blue"><div class="circle-clipper left"><div class="circle"></div></div><div class="gap-patch"><div class="circle"></div></div><div class="circle-clipper right"><div class="circle"></div></div></div><div class="spinner-layer spinner-red"><div class="circle-clipper left"><div class="circle"></div></div><div class="gap-patch"><div class="circle"></div></div><div class="circle-clipper right"><div class="circle"></div></div></div><div class="spinner-layer spinner-yellow"><div class="circle-clipper left"><div class="circle"></div></div><div class="gap-patch"><div class="circle"></div></div><div class="circle-clipper right"><div class="circle"></div></div></div><div class="spinner-layer spinner-green"><div class="circle-clipper left"><div class="circle"></div></div><div class="gap-patch"><div class="circle"></div></div><div class="circle-clipper right"><div class="circle"></div></div></div></div>
+         <div class="bottom left corner natural" id="pauseMessage"></div>
+    </body>
+    <script src="index.js"></script>
+</html>
