--- a/src/login.html
+++ b/src/login.html
@@ -10,10 +10,11 @@
         <script type="text/javascript" src="lib/jquery.js"></script>
         <script src="lib/q.js"></script>
         <script src="lib/LargeLocalStorage.min.js"></script>
+        <script src="lib/jqueryCaret/jquery.caret.js"></script>
     </head>
     <body class="login">
         <div class="transparent black infobar">
-            <span class="borderable readable-text" tabindex="0" id="time" data-readable="The time is 15:00">15:00</span>
+            <span class="borderable readable-text" tabindex="0" id="time" data-readable="The time is not found">--:--</span>
         </div>
         <img src="favicon.png" class="login logo" />
         <div class="login card">
@@ -22,12 +23,12 @@
                 <form>
                     <div class="input-field">
                         <i class="material-icons prefix">account_circle</i>
-                        <input id="username" type="text" class="validate">
+                        <input id="username" type="text" class="validate" autocomplete="off">
                         <label for="username">Username</label>
                     </div>
                     <div class="input-field">
                         <i class="material-icons prefix">lock</i>
-                        <input id="password" type="password" class="validate">
+                        <input id="password" type="password" class="validate" autocomplete="off">
                         <label for="password">Password</label>
                     </div>
                 </form>
@@ -45,9 +46,6 @@
             <div class="card-content" id="bottomCardContent"></div>
             <div id="bottomCardClose"><a class="small corner top linker black-text readable-button borderable" tabindex="0" id="cbc" data-readable="Close bottom card" href="javascript:menu(0);"><i class="material-icons">close</i></a></div>
         </div>
-        <div class="card grey darken-1 white-text left-align" id="sread">
-            <div class="card-content" id="sreadContent"></div>
-        </div>
         <div class="dimback">
             <div class="card alert">
                 <div class="card-content borderable readable-text" tabindex="0" id="alertokinfo" data-readable="Alert content."></div>
@@ -56,12 +54,16 @@
                 </div>
             </div>
         </div>
+        <div class="card grey darken-1 white-text left-align" id="sread">
+            <div class="card-content" id="sreadContent"></div>
+        </div>
+        <div id="sreadBlackout"></div>
         <style id="sreadStyle"></style>
         <style id="hconStyle"></style>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script type="text/javascript" src="addons.js"></script>
-        <script type="text/javascript" src="sread.js"></script>
-        <script type="text/javascript" src="hcon.js"></script>
-        <script type="text/javascript" src="login.js"></script>
+        <script src="js/materialize.min.js"></script>
+        <script src="addons.js"></script>
+        <script src="sread.js"></script>
+        <script src="hcon.js"></script>
+        <script src="login.js"></script>
     </body>
 </html>
