--- a/src/login.html
+++ b/src/login.html
@@ -44,7 +44,7 @@
         </div>
         <div class="bottom card horizontal no-padding" id="bottomCard">
             <div class="card-content" id="bottomCardContent"></div>
-            <div id="bottomCardClose"><a class="small corner top linker black-text readable-button borderable" tabindex="0" id="cbc" data-readable="Close bottom card" href="javascript:menu(0);"><i class="material-icons">close</i></a></div>
+            <div id="bottomCardClose"></div>
         </div>
         <div class="dimback">
             <div class="card alert">
